--- a/style.css
+++ b/style.css
@@ -25,10 +25,9 @@ html, body {
 
 .game-title { 
     margin: 2rem auto 4rem;
-
 }
 .game-title img {
-    width: 6rem;
+    width: 5.5rem;
     height: 6rem;
 }
 
@@ -54,22 +53,83 @@ html, body {
 }
 
 .game-box img {
-    width: 13rem;
-    height: 13rem;
     cursor: pointer;
-    margin: 0 2rem;
 }
 
 .game-box img:hover {
     transform: scale(1.2);
 }
 
-@media only screen and (max-width: 820px) {
+/* responsive for desktop/big screens*/
+@media screen and (min-width: 820px) {
+    .game-box img {
+        width: 13rem;
+        height: 13rem;
+        margin: 0 2rem;
+    }
+}
+
+/* responsive for tablet/ipad/medium screens*/
+@media screen and (min-width: 625px) and (max-width: 820px) {
     .game-box img {
         width: 11rem;
         height: 11rem;
-        cursor: pointer;
         margin: 0 1rem;
+    }
+}
+
+/* responsive for mobile/small screens*/
+@media screen and (max-width: 624px) {
+    .game-box img {
+        width: 8rem;
+        height: 8rem;
+        margin: 0;
+    }
+}
+
+/* responsive for mobile/small screens width smaller width & height (e.g. iPhone SE)*/
+@media screen and (max-width: 624px) and (max-height: 740px) {
+    .game-title h1 {
+        font-size: 1.5rem;
+        letter-spacing: 0.2rem;
+        word-spacing: 0.2rem;
+    }
+    .game-title{
+        margin: 1rem auto 1.5rem;
+    }
+    .game-choose {
+        font-size: 0.9rem;
+    }
+    .game-board p {
+        font-size: 0.9rem;
+    }
+    .game-box img {
+        width: 7rem;
+        height: 7rem;
+        margin: 0;
+    }
+}
+
+/* responsive for special mobile screen (e.g. Galaxy Fold)*/
+@media screen and (max-width: 350px) and (max-height: 655px) {
+    .game-title h1 {
+        font-size: 1.2rem;
+        letter-spacing: 0.1rem;
+        word-spacing: 0.1rem;
+    }
+    .game-title{
+        margin: 1rem auto 1rem;
+    }
+    .game-choose {
+        font-size: 0.8rem
+    }
+    .game-board p {
+        font-size: 0.8rem;
+    }
+    .game-box img {
+        width: 7rem;
+        height: 7rem;
+        margin: 0;
     }
 }
 
